# Issues-FS__Dev

./: .gitmodules  README.md  pyproject.toml  report__osbot-playwright-research.md  requirements-test.txt
.claude/: CLAUDE.md  settings.local.json
.claude/setup/: runbook__claude-web-submodule-setup.md
.claude/setup-claude-app/: CLAUDE.md  SANDBOX-CONTEXT.md  claude-sandbox.sb  run-claude-sandboxed.sh
.claude/setup-claude-code/: CLAUDE.md  Claude-Code-Sandbox-Guide.md  SANDBOX-CONTEXT.md  claude-settings.json  refresh-acls.sh  run-claude-code.sh  setup-claude-code-user.sh  teardown-claude-code-user.sh  verify-sandbox.sh
.github/workflows/: ci-pipeline.yml
.issues/config/: link-types.json  node-types.json
_handoff_utils_code/: pyproject.toml
_handoff_utils_code/docs/: adr__003__context-dump-cli-utility.md
_handoff_utils_code/issues_fs_dev_utils/: __init__.py
_handoff_utils_code/issues_fs_dev_utils/context_dump/: Context_Dump.py  __main__.py
_handoff_utils_code/issues_fs_dev_utils/diff_dump/: Diff_Dump.py  __main__.py
_handoff_utils_code/issues_fs_dev_utils/utils/: Dev_Repo.py
_handoff_utils_code/tests/unit/context_dump/: test_Context_Dump.py
_handoff_utils_code/tests/unit/diff_dump/: test_Diff_Dump.py
_handoff_utils_code/tests/unit/utils/: test_Dev_Repo.py
docs/: assessment__2026-02-09__cli-status.md  claude-github-app-submodules-setup.md
issues_fs_dev/: __init__.py
issues_fs_dev/context_dump/: Context_Dump.py  __main__.py  topic_map.json
issues_fs_dev/diff_dump/: Diff_Dump.py  __main__.py
issues_fs_dev/utils/: Version.py
(+7 files in other folders)
